--- a/hardware.html
+++ b/hardware.html
@@ -42,26 +42,26 @@ text-align:justify;
 <div id="tudo">
   <div class="Componentes Internos">
 <h1> O que é uma CPU? </h1>
-   <img src="imagens/A.JPG" />
+   <img src="imagens/A.jpg" />
    <p> 
 A CPU (Unidade Central de Processamento) é o cérebro do computador, responsável por executar instruções e processar dados, realizando cálculos e operações lógicas para que o sistema funcione.
   </p>
 
 
 <h1> O que é um Armazenamento? </h1>
-   <img src="imagens/B.JPG" />
+   <img src="imagens/B.jpg" />
    <p> 
 O armazenamento é o componente que guarda dados e informações no computador, podendo ser temporário ou permanente. Exemplos incluem discos rígidos (HDD), unidades de estado sólido (SSD) e memória flash.
   </p>
 
 <h1> O que é uma Memória? </h1>
-   <img src="imagens/C.JPG" />
+   <img src="imagens/C.jpg" />
    <p>  
 A memória, geralmente referida como RAM (Memória de Acesso Aleatório), é onde o computador armazena temporariamente dados e programas que estão em uso, permitindo acesso rápido para a CPU.
   </p>
 
 <h1> O que é uma Fonte de alimentação? </h1>
-   <img src="imagens/D.JPG" />
+   <img src="imagens/D.jpg" />
    <p>  
 A fonte de alimentação é o componente que converte a energia elétrica da tomada em voltagens adequadas para alimentar todos os componentes do computador.
   </p>
@@ -72,67 +72,67 @@ A fonte de alimentação é o componente que converte a energia elétrica da tom
 
   <div class="Componentes Externos">
 <h1> O que é um Teclado? </h1>
-   <img src="imagens/E.JPG" />
+   <img src="imagens/E.jpg" />
    <p> 
 O teclado é um dispositivo de entrada usado para digitar textos e comandos no computador.
   </p>
 
 <h1> O que é um Monitor de Vídeo? </h1>
-   <img src="imagens/F.WEBP" />
+   <img src="imagens/F.webp" />
    <p> 
 O monitor é o dispositivo de saída que exibe imagens, vídeos e informações visuais ao usuário.
   </p>
 
 <h1> O que é um Mouse? </h1>
-   <img src="imagens/G.JPG" />
+   <img src="imagens/G.jpg" />
    <p> 
 O mouse é um dispositivo de entrada que permite ao usuário interagir com a interface gráfica do computador, controlando o cursor na tela.
   </p>
 
 <h1> O que é uma Impressora? </h1>
-   <img src="imagens/H.JPG" />
+   <img src="imagens/H.jpg" />
    <p> 
 A impressora é um periférico que produz uma cópia física (impressa) de documentos e imagens digitais.
   </p>
 
 <h1> O que é um Plotter? </h1>
-   <img src="imagens/I.JPG" />
+   <img src="imagens/I.jpg" />
    <p> 
 O plotter é uma impressora especializada usada para produzir desenhos técnicos, gráficos e grandes formatos, geralmente em áreas como engenharia e arquitetura.
   </p>
 
 <h1> O que é um Scanner? </h1>
-   <img src="imagens/J.JPG" />
+   <img src="imagens/J.jpg" />
    <p> 
 O scanner é um dispositivo que digitaliza documentos ou imagens físicas, transformando-os em arquivos digitais para o computador.
   </p>
 
 <h1> O que é um Gabinete? </h1>
-   <img src="imagens/K.JPG" />
+   <img src="imagens/K.jpg" />
    <p> 
 O gabinete é a estrutura que abriga e protege todos os componentes internos do computador, como a placa-mãe, CPU, memória e fonte de alimentação.
   </p>
 
 <h1> O que é uma Web Cam? </h1>
-   <img src="imagens/L.JPG" />
+   <img src="imagens/L.jpg" />
    <p> 
 A webcam é uma câmera digital conectada ao computador, usada para capturar vídeo ao vivo, como em videochamadas e gravações.
   </p>
 
 <h1> O que são Caixas de Som? </h1>
-   <img src="imagens/M.JPG" />
+   <img src="imagens/M.jpg" />
    <p> 
 As caixas de som são dispositivos de saída que reproduzem áudio, permitindo ouvir sons, músicas, vídeos e outros conteúdos sonoros.
   </p>
 
 <h1> O que é um Microfone? </h1>
-   <img src="imagens/N.JPG" />
+   <img src="imagens/N.jpg" />
    <p> 
 O microfone é um dispositivo de entrada que capta sons e os converte em sinais digitais para serem processados pelo computador.
   </p>
 
 <h1> O que é um Head Set? </h1>
-   <img src="imagens/O.JPG" />
+   <img src="imagens/O.jpg" />
    <p> 
 O headset é um conjunto de fones de ouvido com microfone embutido, usado para ouvir áudio e falar, muito comum em jogos, chamadas e gravações.
   </p>
@@ -144,37 +144,37 @@ O headset é um conjunto de fones de ouvido com microfone embutido, usado para o
 
   <div class="Interfaces de Entrada e Saída">
 <h1> O que são Interfaces sem Fio? </h1>
-   <img src="imagens/a1.JPG" />
+   <img src="imagens/a1.jpg" />
    <p> 
 Interfaces sem fio permitem a comunicação e conexão entre dispositivos sem o uso de cabos, utilizando tecnologias como Wi-Fi, Bluetooth e NFC.
   </p>
 
 <h1> O que é um Áudio? </h1>
-   <img src="imagens/a2.JPG" />
+   <img src="imagens/a2.jpg" />
    <p> 
 Em informática, áudio refere-se à entrada, processamento e saída de sons, incluindo dispositivos como microfones, alto-falantes e placas de som.
   </p>
 
 <h1> O que é uma Rede (Ethernet)? </h1>
-   <img src="imagens/a3.JPG" />
+   <img src="imagens/a3.jpg" />
    <p> 
 A rede Ethernet é um padrão de conexão cabeada para interligar computadores e dispositivos em uma rede local (LAN), permitindo a troca de dados rápida e segura.
   </p>
 
 <h1> O que é um VGA? </h1>
-   <img src="imagens/a4.JPG" />
+   <img src="imagens/a4.jpg" />
    <p> 
 VGA (Video Graphics Array) é uma interface de vídeo que transmite sinais analógicos do computador para o monitor. É uma conexão mais antiga e menos usada atualmente.
   </p>
 
 <h1> O que é um HDMI? </h1>
-   <img src="imagens/a5.JPG" />
+   <img src="imagens/a5.jpg" />
    <p> 
 HDMI (High-Definition Multimedia Interface) é uma interface digital usada para transmitir áudio e vídeo em alta definição entre dispositivos, como computadores e monitores ou TVs.
   </p>
 
 <h1> O que é um USB? </h1>
-   <img src="imagens/a6.JPG" />
+   <img src="imagens/a6.jpg" />
    <p> 
 USB (Universal Serial Bus) é uma interface padrão para conectar dispositivos ao computador, usada para transferência de dados e fornecimento de energia.
   </p>
@@ -182,4 +182,5 @@ USB (Universal Serial Bus) é uma interface padrão para conectar dispositivos a
   </div>
 </div>
 </body>
+
 </html>
