--- a/home.html
+++ b/home.html
@@ -178,13 +178,13 @@ h3 {
 </div>
 
 <div id="image-title">
-  <img src="imagens/Gato.JPG" alt="Caracal Esquerda" />
+  <img src="imagens/Gato.jpg" alt="Caracal Esquerda" />
   
   <div class="title-card center-title">
     <h1>LINCE DO DESERTO</h1>
   </div>
   
-  <img src="imagens/Gato2.JPG" alt="Caracal Direita" class="right-img" />
+  <img src="imagens/Gato2.jpg" alt="Caracal Direita" class="right-img" />
 </div>
 
 <div class="info-block">
@@ -236,4 +236,5 @@ h3 {
   </p>
 </div>
 </body>
+
 </html>
