--- a/personalidades.html
+++ b/personalidades.html
@@ -42,23 +42,24 @@ text-align:justify;
 <a href="hardware.html">Hardware</a>
 <a href="so.html">SO</a>
 </div>
-<img src="imagens/BillGates.JPG" />
+<img src="imagens/BillGates.jpg" />
 <h1> Bill Gates </h1>
 <p>
 Co-fundador da Microsoft, Bill Gates foi um dos principais responsáveis por popularizar o computador pessoal. Além de empresário de sucesso, é conhecido por seu trabalho filantrópico global através da Fundação Bill & Melinda Gates.
 </p>
 
-<img src="imagens/SteveJobs.JPG" />
+<img src="imagens/SteveJobs.jpg" />
 <h1> Steve Jobs </h1>
 <p> 
 Visionário e co-fundador da Apple, Steve Jobs revolucionou a indústria da tecnologia com produtos inovadores como o iPhone, iPod e Macintosh, transformando a forma como interagimos com dispositivos eletrônico
 </p>
 
-<img src="imagens/LinusTorvalds.PNG" />
+<img src="imagens/LinusTorvalds.png" />
 <h1> Linus Torvalds </h1>
 <p>
 Criador do núcleo do sistema operacional Linux, Linus Torvalds é uma figura central no mundo do software livre e open source. Seu trabalho possibilitou o desenvolvimento de sistemas operacionais usados em servidores, dispositivos móveis (Android) e muito mais.
 </p>
 
 </body>
+
 </html>
