--- a/home.html
+++ b/home.html
@@ -49,8 +49,8 @@ p {
   <a href="so.html">SO</a>
 </div>
 
-<img src="imagens/Gato.JPG" alt="Caracal Esquerda" />
-<img src="imagens/Gato2.JPG" alt="Caracal Direita" />
+<img src="imagens/Gato.jpg" alt="Caracal Esquerda" />
+<img src="imagens/Gato2.jpg" alt="Caracal Direita" />
 <h1> LINCE DO DESERTO </h1>
 
 
